TreeList: Fix changing the filterPanel.visible option to false (T812031)

--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -302,7 +302,7 @@
         width: 100%;
     }
 
-    .dx-hidden {
+    .dx-@{widgetName} .dx-hidden {
         display: none;
     }
 
